fixing clipping of gallery

--- a/styles.css
+++ b/styles.css
@@ -225,6 +225,7 @@ button:active.teal {
     align-items: center;
     justify-content: space-between;
     width: 100%;
+    overflow-x: clip;
 }
 
 .carousel-card > img {
